# multiGroupVI

./: NOTICE.md  README.md  setup.cfg
multigroup_vi/: __init__.py
multigroup_vi/data/: data_splitting.py
multigroup_vi/model/: __init__.py  multigroup_vi.py
multigroup_vi/model/base/: training_mixin.py
multigroup_vi/module/: multigroup_vi.py
notebooks/: analyze_haber_region.ipynb  create_haber_region_dataset.ipynb
