[metadata]
name = multigroup-vi
version = 0.2.0

[options]
package_dir =
packages =
    find:
python_requires =
    >=3.8
install_requires =
    scanpy>=1.8.1
    protobuf<=3.20.1
    scvi-tools==0.18.0

[options.packages.find]
where =

[options.extras_require]
dev =
    pre-commit==2.15.0
    toml==0.10.2
    pytest==6.2.5